2007-11-06  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-utils.c (is_rfc2047_token): Don't assume the charset
	component of the token is >= 1 char, start checking for a '?' at
	string index 2.

2007-11-01  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-gpg-context.c (gpg_ctx_parse_status): Clear any
	error we may have (bad passwd?) each pass so that we don't try to
	set an error when one is already set.

2007-10-27  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-message.c (g_mime_message_set_mime_part): Reset the
	raw headers of the current top-level MIME part so that if it is
	being used elsewhere, it won't carry along all the message headers
	from this message.

2007-10-24  Jeffrey Stedfast  <fejj@novell.com>

	* gmime/gmime-part.c (g_mime_part_encoding_from_string): Handle
	the value "uuencode" the same as we were handling "x-uuencode".

2007-10-14  Jeffrey Stedfast  <fejj@gnome.org>

	Changed the license to LGPLv2

2007-10-13  Jeffrey Stedfast  <fejj@gnome.org>

	* tests/test-pgp.c (test_export): Skip past the PGP headers so as
	to avoid comparing the "Version: " headers which might fail if a
	newer gnupg is used than what created the pgp key originally.

2007-10-13  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-filter-html.c: Updated for url-scanner.c symbol
	changes.

	* util/url-scanner.[c,h]: Renamed symbols to get rid of the G
	prefix and marked all symbols for internal linkage.

	* util/md5-utils.h: Declare symbols as internal.

	* util/memchunk.h: Here too.

	* util/cache.h: And here.

	* util/list.h: Same.

2007-09-25  Joe Shaw  <joe@joeshaw.org>

	* configure.in: Set an AM_CONDITIONAL for whether we are
	building with large file support.

	* mono/GMime.metadata.in: Move GMime.metadata to this and
	change any references of off_t to @off_t_type@, which is
	substituted with the correct type.  This is needed because
	off_t is converted to an IntPtr by the gtk-sharp binding
	generator, which is good for 64-bit systems and 32-bit